*Version 4.3.0*
* Upgraded for Mango 4.3.0
* Show user count in users page

*Version 4.2.1*
* Fix where pagination would not get triggered in watchlist builder selected points table
* Allow non-admin users to create reset-password token for users they had permission to edit
* Fix for non-admin users cannot edit other users when Edit own user details system permission is not set
* Fix for non-admin users cannot see permissions inputs when editing own profile
* New users automatically get the same Organization as the creating user

*Version 4.2.0*
* Upgraded for Mango 4.2.0
* Fix for Non Admin User cannot Create new Users because of Missing permissions inputs

*Version 4.1.1*
* Add UI setting to optionally disable the unacknowledged alarms icon in the toolbar

*Version 4.1.0*
* Upgraded for Mango 4.1.0

*Version 4.0.0*
* Changes below here added in 4.0.0-beta.12
* Show module install date on modules page
* Improve service worker installation/activation process, fix caching issues when upgrading modules
* Add maUiServiceWorkerHelper service to interact with service worker
* Update ma-tile-map component to use latest Mapbox API
* Changes below here added in 4.0.0-beta.15
* Show store URL on modules page

*Version 3.7.5*
* Add attribute to events table that allows specifying the date format

*Version 3.7.4*
* Fix redirect to user configured not found page

*Version 3.7.3*
* Redirect to configured login page when unauthenticated

*Version 3.7.2*
* Fix reconnection logic when WebSocket is closed due to error

*Version 3.7.1*
* Update Spanish translations

*Version 3.7.0*
* Updated to work with Mango 3.7 Core
* Fix email recipients tooltip
* Add reload button to toolbar when development mode is turned on
* Use user configured editor theme in scripting editor

*Version 3.6.7*
* Fix bug introduced in v3.6.6 where you have to confirm every time you set a point's value
* Fix bug where every point value response is cached in the browser resulting in excessive memory usage