@@ -14,22 +14,23 @@ import componentTemplate from './mailingListSelect.html';
 const $inject = Object.freeze(['$scope', 'maMailingList']);
 class MailingListSelectController {
     static get $inject() { return $inject; }
+
     static get $$ngIsClass() { return true; }
-    
+
     constructor($scope, maMailingList) {
         this.$scope = $scope;
         this.maMailingList = maMailingList;
     }
-    
+
     $onInit() {
         this.ngModelCtrl.$render = () => this.render();
         this.getLists();
         this.newList();
 
-        this.maMailingList.subscribe((event, item, originalXid) => {
+        this.maMailingList.subscribe((event, item, attributes) => {
             if (!this.lists) return;
 
-            const index = this.lists.findIndex(list => list.id === item.id);
+            const index = this.lists.findIndex((list) => list.id === attributes.itemId);
             if (index >= 0) {
                 if (event.name === 'update' || event.name === 'create' || event.name === 'rtDataSaved') {
                     this.lists[index] = item;
@@ -39,24 +40,23 @@ class MailingListSelectController {
             } else if (event.name === 'update' || event.name === 'create' || event.name === 'rtDataSaved') {
                 this.lists.push(item);
             }
-
         }, this.$scope, ['create', 'update', 'delete', 'rtDataSaved']);
     }
-    
+
     $onChanges(changes) {
     }
-    
+
     setViewValue() {
         this.ngModelCtrl.$setViewValue(this.selected);
     }
-    
+
     render() {
         this.selected = this.ngModelCtrl.$viewValue;
     }
 
     getLists() {
         this.maMailingList.list().then(
-            lists => {
+            (lists) => {
                 this.lists = lists;
             }
         );
@@ -67,14 +67,13 @@ class MailingListSelectController {
         this.selected = new this.maMailingList();
         this.setViewValue();
     }
-
 }
 
 export default {
     template: componentTemplate,
     controller: MailingListSelectController,
     bindings: {
-        selectMultiple: '<?',
+        selectMultiple: '<?'
     },
     require: {
         ngModelCtrl: 'ngModel'
